--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Космическая Игра</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div class="stars" id="stars"></div>
@@ -149,6 +149,6 @@
       </div>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="./script.js" defer></script>
 </body>
 </html>
