--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <noscript>Для работы игры нужен JavaScript</noscript>
   <div class="stars" id="stars"></div>
   <div class="container">
     <!-- Страница авторизации -->
