--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="fcp-marker">Загрузка…</div>
-  <noscript>Для работы игры нужен JavaScript</noscript>
+  <h1 id="lcp-title">🚀 Космический авангард</h1>
   <div class="stars" id="stars"></div>
   <div class="container">
     <!-- Страница авторизации -->
